#0009 - fix jdk 17 to 11